--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,7 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
-
-# Fabric Properties
-	# check these on https://modmuss50.me/fabric.html
-	minecraft_version=1.20.4
-	loader_version=0.15.7
-
-# Mod Properties
-	mod_version = 0.0.1
-	maven_group = com.github.voxxin
-	archives_base_name = MultiConfigAPI
+# API Properties
+version = 0.0.1
+maven_group = com.github.voxxin
+archives_base_name = MultiConfigAPI
 
